# nwave-dedup

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/nwave_dedup/: __init__.py  classifier.py  cli.py  languages.py  scanner.py
tests/: test_classifier_smoke.py  test_scanner_smoke.py
