[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "nwave-dedup"
version = "0.1.0.dev0"
description = "Cross-language code duplication scanner + classifier + fix-suggester. Tree-sitter based. nWave plugin."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Alessandro Di Gioia", email = "alex@nwave.ai" },
]
keywords = [
    "code-quality",
    "duplication-detection",
    "tree-sitter",
    "ssot",
    "refactoring",
    "nwave",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    # Tree-sitter core (multi-language AST parsing)
    "tree-sitter>=0.23.0",
    # Pre-bundled grammars (Python, JS, TS, Rust, Go, Ruby, OCaml, +50 more)
    # Provides `get_parser(lang_name)` API — no separate compilation per grammar
    # Pin: hard ==0.7.0 because 0.13.0 produced empty groups in CI smoke
    # tests (likely grammar revision changed AST shape; investigate before
    # widening). Earned Trust: pin tight, expand only after empirical probe.
    "tree-sitter-language-pack==0.7.0",
    # CLI + reporting
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.7.0",
    "mypy>=1.8.0",
]

[project.scripts]
nwave-dedup = "nwave_dedup.cli:main"

[project.urls]
Homepage = "https://github.com/nWave-ai/nwave-dedup"
Repository = "https://github.com/nWave-ai/nwave-dedup"
Issues = "https://github.com/nWave-ai/nwave-dedup/issues"
"Parent project" = "https://github.com/nWave-ai/nWave"

[tool.hatch.build.targets.wheel]
packages = ["src/nwave_dedup"]

# ─── Quality + style ──────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "TCH", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "-q", "--strict-markers"]
